# deeplabcut-webui

./: .dlc-webui.sample.yaml  .env.sample  .gitignore  LICENSE  README.md  Taskfile.yaml  docker-compose.yaml  index.html  manifest.webmanifest  mkdocs.yaml  sw.js
assets/: AboutView.7998295e.js  index.00b21928.css  index.0135ef50.js  index.0ea78db0.js  index.107a4997.js  index.21a6a794.css  index.28757d4e.js  index.28c0326d.js  index.2a5400ba.css  index.2be2b6f4.css  index.2c0f34ee.css  index.2dcd7d11.js  index.3019f5d1.css  index.310ffb6c.js  index.4412d4e5.js  index.467789e3.js  index.482dfa17.css  index.49222f92.css  index.50bd27e3.css  index.50cb0c60.css  index.52e9100a.css  index.59a1dbf3.js  index.5b8341db.css  index.62552fdd.js  (+56 more)
backend/: Dockerfile  conda.yaml  const.py  dlc.Dockerfile  main.py  pyinstaller.spec  pyproject.toml  requirements-docs.txt  requirements.txt  setup.cfg  setup.py
backend/app/: __main__.py  main.py
backend/app/config/: __init__.py
backend/app/managers/: __init__.py  labels.py
backend/app/responses/: __init__.py
backend/app/routers/: projects.py  videos.py
backend/app/utils/: __init__.py  conversion.py  deepmerge.py
backend/responses/: video.py
backend/routers/: projects.py  videos.py
backend/tests/testdata/Project 1/: config.yaml
backend/tests/testdata/Project 1/labeled-data/Ant with LEDs/: CollectedData_TM.csv  CollectedData_TM.h5
backend/tests/testdata/Project 1/labeled-data/Frame Test/: CollectedData_TM.csv  CollectedData_TM.h5
backend/tests/testdata/Project 2/: config.yaml
backend/utils/: __init__.py
(+89 files in other folders)
