[metadata]
name = deeplabcut-webui
description = Backend API for the unofficial DeepLabCut WebUI
url = https://github.com/jcwillox/deeplabcut-webui

license = MIT
platforms = any

classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.8
packages = find:

[options.packages.find]
exclude = tests, tests.*
